# cronos

./: .codecov.yml  .envrc  .envrc.example  .flake8  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yml  .mergify.yml  AGENT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_CHANGELOG.md  SECURITY.md  codecov.yml  default.nix  flake.nix  go.mod  go.sum  go.work  gomod2nix.toml  readme.md  start-local-node.sh
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml  issue_labeler.yml  pr_labeler.yml
app/: admission_test.go  app.go  app_nogravity.go  attestation.go  bench_getconfig_test.go  bench_test.go  block_address.go  config.go  decode_cache.go  decode_cache_test.go  decoder_cache.go  decoder_cache_test.go  disable_tx_replacement_test.go  encoding.go  encoding_test.go  (+32 more)
integration_tests/: .envrc  .flake8  README.md  attestation_util.py  conftest.py  cosmoscli.py  eip712_utils.py  gorc.py  gravity_utils.py  helper.py  ibc_utils.py  ibc_v18.py  install_hermes.nix  msg_send_types.json  network.py  pyproject.toml  pytest.ini  shell.nix  staking_v1_8.py  test_app_mempool.py  test_attestation.py  test_attestation_basic.py  test_attestation_collector.py  test_attestation_v1.py  test_attestation_v2.py  test_bank_precompiles.py  test_basic.py  test_benchmark_storage.py  test_binary_compatibility.py  test_broadcast.py  test_chain_id.py  test_client_id.py  test_e2ee.py  test_e2ee_evm.py  test_eip1559.py  test_eip2935.py  test_eip712.py  test_eip7702.py  test_evm_params_int_64_overflow.py  test_exported_genesis.py  (+37 more)
integration_tests/configs/: allow-unprotected-txs.jsonnet  attestation.jsonnet  attestation_collector.jsonnet  attestation_v1.jsonnet  big_basefee.jsonnet  binary-compat-package.nix  binary-compat.jsonnet  broadcast.jsonnet  broken-cronosd.nix  broken-cronosd.patch  cosmovisor.jsonnet  cosmovisor.yaml  cosmovisor_gravity.jsonnet  cosmovisor_recent.jsonnet  cosmovisor_testnet.jsonnet  cosmovisor_with_ibc.jsonnet  cronos-experimental-devnet.jsonnet  default.jsonnet  default.yaml  disable_auto_deployment.jsonnet  disable_auto_deployment.yaml  eip2935.jsonnet  enable-indexer-flood.jsonnet  enable-indexer.jsonnet  enable-indexer.yaml  generate-test-yamls  genesis_token_mapping.jsonnet  genesis_token_mapping.yaml  ibc.jsonnet  ibc_rly.jsonnet  ibc_rly_evm.jsonnet  ibc_timeout.jsonnet  ibc_timeout_hermes.jsonnet  long_timeout_commit.jsonnet  long_timeout_commit.yaml  low_block_gas_limit.jsonnet  low_block_gas_limit.yaml  mempool_app.jsonnet  mempool_app_no_replace.jsonnet  min_gas_price.jsonnet  (+19 more)
integration_tests/contracts/: .gitignore  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
integration_tests/contracts/contracts/: BenchmarkStorage.sol  CheckpointOracle.sol  CosmosToken.sol  Counter.sol  CroBridge.sol  CronosGravity.sol  CronosGravityCancellation.sol  Gravity.sol  Greeter.sol  ICosmosToken.sol  Random.sol  Relayer.sol  Simple7702Account.sol  Simple7702Counter.sol  TestAccessList.sol  TestBank.sol  TestBlackListERC20.sol  TestBlockTxProperties.sol  TestCRC20.sol  TestCRC20Proxy.sol  TestERC20A.sol  TestERC20Owner.sol  TestERC20Utility.sol  TestERC21Source.sol  TestEip2935.sol  TestICA.sol  TestLLama.sol  TestMaliciousSupply.sol  TestMaxValue.sol  TestMessageCall.sol  TestRelayer.sol  TestRevert.sol  TestSuicide.sol  Utils.sol  src
integration_tests/cosmos/bank/v1beta1/: bank_pb2.py  tx_pb2.py
integration_tests/cosmos/base/v1beta1/: coin_pb2.py
integration_tests/cosmos/crypto/multisig/v1beta1/: multisig_pb2.py
integration_tests/cosmos/crypto/secp256k1/: keys_pb2.py
integration_tests/cosmos/tx/signing/v1beta1/: signing_pb2.py
integration_tests/cosmos/tx/v1beta1/: tx_pb2.py
integration_tests/cosmos_proto/: cosmos_pb2.py
integration_tests/ethermint/crypto/v1/ethsecp256k1/: keys_pb2.py
integration_tests/ethermint/evm/v1/: query_pb2.py
integration_tests/ethermint/types/v1/: web3_pb2.py
integration_tests/gogoproto/: gogo_pb2.py
integration_tests/google/protobuf/: any_pb2.py
integration_tests/protobuf/: __init__.py
integration_tests/protobuf/cosmos/bank/v1beta1/: bank_pb2.py  tx_pb2.py
integration_tests/protobuf/cosmos/base/v1beta1/: coin_pb2.py
integration_tests/protobuf/cosmos/crypto/multisig/v1beta1/: multisig_pb2.py
integration_tests/protobuf/cosmos/crypto/secp256k1/: keys_pb2.py
integration_tests/protobuf/cosmos/tx/signing/v1beta1/: signing_pb2.py
integration_tests/protobuf/cosmos/tx/v1beta1/: tx_pb2.py
integration_tests/protobuf/cosmos_proto/: cosmos_pb2.py
integration_tests/protobuf/ethermint/crypto/v1/ethsecp256k1/: keys_pb2.py
integration_tests/protobuf/ethermint/evm/v1/: query_pb2.py
integration_tests/protobuf/ethermint/types/v1/: web3_pb2.py
integration_tests/protobuf/gogoproto/: gogo_pb2.py
integration_tests/protobuf/google/protobuf/: any_pb2.py
integration_tests/test_expansion/: .env  .env1  cronos_has_dotenv.yaml  cronos_has_posix_no_dotenv.yaml  template_no_dotenv.yaml  test_expansion.py
testground/benchmark/: .flake8  flake.nix  manifest.toml  overlay.nix  pyproject.toml
testground/benchmark/benchmark/: cli.py  context.py  cosmostx.py  echo.py  erc20.py  main.py  network.py  params.py  peer.py  sendtx.py  stateless.py  stats.py  sync.py  test_params.py  test_sync.py  test_utils.py  testnet.py  topology.py  transaction.py  types.py  utils.py
testground/benchmark/compositions/: docker-compose.jsonnet  docker-compose.yml  local.toml  template.yml
(+1052 files in other folders)
