[tool.poetry]
name = "integration_tests"
version = "0.1.0"
description = ""
authors = ["chain-dev <chain@crypto.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"
pytest-github-actions-annotate-failures = "^0.1.7"
flake8 = "^4.0.1"
black = "^22.6"
pytest-xdist = "^2.5.0"
flake8-black = "^0.3.3"
flake8-isort = "^4.1.1"
pep8-naming = "^0.11.1"
protobuf = "^4.21.6"
grpcio = "^1.53.0"
pyyaml = "^6.0.1"
python-dateutil = "^2.8.1"
python-dotenv = "^0.19.2"
pystarport = { git = "https://github.com/crypto-com/pystarport.git", branch = "main", rev = "03017cbb66f200408de3c039a404216373430eaa" }
websockets = "^10.3"
toml = "^0.10.2"
pysha3 = "^1.0.2"
jsonnet = "^0.18.0"
eth-account = "^0.8.0"
cprotobuf = "^0.1.11"
pathspec = "^0.10.1"
flaky = "^3.7.0"
web3 = "^6.0.0b6"
frozenlist = "1.3.0"
yarl = "1.7.2"
eth-bloom = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
