[tool.poetry]
name = "integration_tests"
version = "0.1.0"
description = ""
authors = ["chain-dev <chain@crypto.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.0"
pytest-github-actions-annotate-failures = "^0.2"
flake8 = "^7.0"
black = "^24.3"
flake8-black = "^0.3"
flake8-isort = "^6.1"
pep8-naming = "^0.13"
protobuf = "^4.25"
python-dateutil = "^2.8"
web3 = "^6.15"
python-dotenv = "^1.0"
pystarport = { git = "https://github.com/mmsqe/pystarport.git", branch = "fix_cmd" }
websockets = "^12.0"
toml = "^0"
jsonnet = "^0"
eth-account = "^0.11"
cprotobuf = "^0.1.11"
flaky = "^3.7"
eth-bloom = "^3.0"
eth-hash = "^0"
pyyaml = "^6.0.2rc1"
pytest-timeout = "^2.3.1"
rpds-py = "0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
