[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["huangyi <huang@crypto.com>"]

[tool.poetry.dependencies]
python = "^3.11"
influxdb-client = "^1"
websocket-client = "^1"
netifaces = "^0"
pydantic = "^2"
tomlkit = "^0"
web3 = "^6"
hexbytes = "^0"
bech32 = "^1"
requests = "^2.32"
click = "^8.1.7"
ujson = "^5.10.0"
jsonmerge = "^1.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-github-actions-annotate-failures = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
stateless-testcase = "benchmark.stateless:cli"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
