[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["huangyi <huang@crypto.com>"]

[tool.poetry.dependencies]
python = "^3.11"
influxdb-client = "^1"
websocket-client = "^1"
netifaces = "^0"
pydantic = "^2"
tomlkit = "^0"
web3 = "^6"
hexbytes = "^0"
bech32 = "^1"
requests = "^2.34"
click = "^8.4.0"
ujson = "^5.12.1"
jsonmerge = "^1.9.2"

backoff = "^2.2.1"
cprotobuf = "^0.1.12"
[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-github-actions-annotate-failures = "^0.4.0"
black = "^26.5.1"
flake8 = "^7.3.0"
flake8-black = "^0.4.0"
flake8-isort = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
stateless-testcase = "benchmark.stateless:cli"
testnet = "benchmark.testnet:cli"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
